// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MapLocationComponent should display outdated warning 1`] = `
<termo-map-location
  bottom={[Function Number]}
  loading={[Function Function]}
  location={[Function Function]}
  right={[Function Number]}
  selectLocation={[Function OutputEmitterRef]}
>
  <div
    aria-label="location-card"
    class="temperature-box"
    data-testid="location-card"
    role="group"
  >
    <header>
      <h2>
        🌡
        <span
          class="label"
          data-testid="location-name"
        >
          Górny Tunel
        </span>
      </h2>
    </header>
    <div
      class="temperatures"
    >
      <div
        class="temperature temperature--primary"
      >
        <span
          class="value"
          data-testid="location-temperature"
        >
          21.12
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
      <div
        class="temperature temperature--minimal"
        data-testid="location-minimal-temperature"
      >
        <span
          class="value"
        >
          Min: 
          <span
            data-testid="location-minimal-value"
          >
            19.50
          </span>
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
    </div>
    <div
      class="footer footer--warning footer--warning-outdated"
    >
      <span
        data-testid="location-outdated"
      >
        Opóźnione: 4 dni
      </span>
    </div>
  </div><div
    class="arrow"
  />
</termo-map-location>
`;

exports[`MapLocationComponent should properly render base state 1`] = `
<termo-map-location
  bottom={[Function Number]}
  loading={[Function Function]}
  location={[Function Function]}
  right={[Function Number]}
  selectLocation={[Function OutputEmitterRef]}
>
  <div
    aria-label="location-card"
    class="temperature-box"
    data-testid="location-card"
    role="group"
  >
    <header>
      <h2>
        🌡
        <span
          class="label"
          data-testid="location-name"
        >
          Górny Tunel
        </span>
      </h2>
    </header>
    <div
      class="temperatures"
    >
      <div
        class="temperature temperature--primary"
      >
        <span
          class="value"
          data-testid="location-temperature"
        >
          21.12
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
      <div
        class="temperature temperature--minimal"
        data-testid="location-minimal-temperature"
      >
        <span
          class="value"
        >
          Min: 
          <span
            data-testid="location-minimal-value"
          >
            19.50
          </span>
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
    </div>
  </div><div
    class="arrow"
  />
</termo-map-location>
`;

exports[`MapLocationComponent should render loading state 1`] = `
<termo-map-location
  bottom={[Function Number]}
  loading={[Function Function]}
  location={[Function Function]}
  right={[Function Number]}
  selectLocation={[Function OutputEmitterRef]}
>
  <termo-spinner /><div
    class="arrow"
  />
</termo-map-location>
`;

exports[`MapLocationComponent should render selected state 1`] = `
<termo-map-location
  bottom={[Function Number]}
  loading={[Function Function]}
  location={[Function Function]}
  right={[Function Number]}
  selectLocation={[Function OutputEmitterRef]}
  selected={[Function Boolean]}
>
  <div
    aria-label="location-card"
    class="temperature-box"
    data-testid="location-card"
    role="group"
  >
    <header>
      <h2>
        🌡
        <span
          class="label"
          data-testid="location-name"
        >
          Górny Tunel
        </span>
      </h2>
    </header>
    <div
      class="temperatures"
    >
      <div
        class="temperature temperature--primary"
      >
        <span
          class="value"
          data-testid="location-temperature"
        >
          21.12
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
      <div
        class="temperature temperature--minimal"
        data-testid="location-minimal-temperature"
      >
        <span
          class="value"
        >
          Min: 
          <span
            data-testid="location-minimal-value"
          >
            19.50
          </span>
        </span>
        <span
          class="unit"
        >
          °C
        </span>
      </div>
    </div>
  </div><div
    class="arrow"
  />
</termo-map-location>
`;
